# metaOpenEnvHack

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  inference_test.py  models.py  openenv.yaml  pyproject.toml  space_info.json  test_openrouter.py  test_zai.py
cloud-sre-ops-env/: README.md  inference_test.py  models.py  openenv.yaml
cloud-sre-ops-env/server/: Dockerfile  app.py  sre_ops_environment.py
server/: app.py  requirements.txt  travel_ops_environment.py
